[gd_scene load_steps=2 format=3 uid="uid://csnda2rthjsq1"]

[ext_resource type="Script" uid="uid://crg82860gl7s1" path="res://scripts/AICardNotification.gd" id="1_notification"]

[node name="AICardNotification" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -120.0
offset_right = 280.0
offset_bottom = -15.0
grow_vertical = 0
script = ExtResource("1_notification")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.12, 0.2, 0.95)

[node name="BorderHighlight" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.3, 0.3, 0.6)

[node name="InnerBackground" type="ColorRect" parent="Background/BorderHighlight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.12, 0.18, 0.95)

[node name="VBox" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardName" type="Label" parent="Background/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.9, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 18
text = "IA jug√≥: Us√≥"
horizontal_alignment = 1

[node name="CardEffect" type="Label" parent="Background/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 16
text = "üí• Efecto"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CardCost" type="Label" parent="Background/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.8, 0.9)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 16
text = "Costo: X man√°"
horizontal_alignment = 1

[node name="ParticleEffect" type="GPUParticles2D" parent="."]
position = Vector2(132, 2)
